--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,20 @@ img:last-child {
     margin-top: .7em;
     width: 9.8085em;
 }
+
+.display_blocks {
+    background-color: #fff;
+    border-top: 1px solid #eee;
+    border-left: 1px solid #eee;
+    border-right: 1px solid #eee;
+    padding: 16px;
+}
+
+._content_1oahw6 {
+    max-width: 640px;
+    margin: 0 auto;
+}
+
+.center {
+    text-align: center;
+}
