--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,6 @@ h6 a {
     color: #F87060;
 }
 
-p.description {
-    color: #102542;
-    width: 600px;
-    margin-left: 20px;
-}
-
 p.header {
     color: #102542;
     width: 650px;
@@ -219,4 +213,29 @@ img {
     width: 90%;
     display: inline-block;
     text-align: center;
+}
+
+
+/* Bootstrap Override */
+
+.btn-primary:hover,
+.btn-primary {
+    color: #B3A394;
+    background-color: #102542;
+    border-color: #102542;
+    display: block;
+    padding: 10px 5px;
+    text-align: center;
+    text-decoration: none;
+    width: 200px;
+    border-radius: 8px;
+    margin-left: 20px;
+}
+
+.btn-primary:hover {
+    background-color: #102542;
+}
+
+.btn.btn-primary:active {
+    background-color: #102542 !important;
 }
