--- a/css/style.css
+++ b/css/style.css
@@ -31,51 +31,12 @@ label {
     font-family: 'Josefin Sans', sans-serif;
 }
 
-.call-to-action {
-    color: #B3A394;
-    background-color: #102542;
-    display: block;
-    padding: 10px 5px;
-    text-align: center;
-    text-decoration: none;
-    width: 200px;
-    border-radius: 8px;
-    margin-left: 20px;
-}
-
 
 /* Column Layouts */
 
-.col30 {
-    width: 30%;
-    display: inline-block;
-    vertical-align: top;
-    box-sizing: border-box;
-    padding: 20px;
-}
-
-.col50 {
-    width: 50%;
-    display: inline-block;
-    vertical-align: top;
-    box-sizing: border-box;
-    padding: 20px;
-}
-
-.col70 {
-    width: 70%;
-    display: inline-block;
-    vertical-align: top;
-    box-sizing: border-box;
-    padding: 20px;
-}
-
 .logo {
     width: 75px;
-}
-
-.header {
-    float: right;
+    height: 75px;
 }
 
 .top {
